fixed content overflow
Content no longer overflow's under nav

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,53 @@
+#navbar {
+  overflow: hidden;
+  margin-left: -0.5rem;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+#navbar a {
+  float: left;
+  display: block;
+  color: #cc9a9a;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+.sticky {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.tab {
+  display: none;
+}
+.active-tab {
+  display: inline;
+}
+#navbar a.active {
+  color: #C53360;
+}
+.content {
+  margin-bottom: 3.5rem;
+}
+header {
+  padding: 16px;
+  text-align: center;
+}
+body {
+  background: #C53360;
+  font-family: 'Work Sans', sans-serif;
+}
+.homeImage {
+  height: 27.5em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.content {
+  text-align: center;
+}
 body {
   background-color: #C53360;
   color: white;
@@ -27,39 +77,11 @@ body {
 .tabs .topics .tab:hover {
   text-decoration: underline;
 }
-#navbar {
-  overflow: hidden;
-  margin-left: -0.5rem;
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
-}
-#navbar a {
-  float: left;
-  display: block;
-  color: #cc9a9a;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-.sticky {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-.tab {
-  display: none;
-}
-.active-tab {
-  display: inline;
-}
-#navbar a.active {
-  color: #C53360;
-}
 .aboutContent {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 3rem;
 }
 .aboutContent .team:first-child {
   padding-bottom: 3em;
@@ -67,20 +89,12 @@ body {
 .aboutContent .team {
   text-align: center;
 }
-header {
-  padding: 16px;
-  text-align: center;
+.aboutContent .team i {
+  color: white;
 }
-body {
-  background: #C53360;
-  font-family: 'Work Sans', sans-serif;
+.aboutContent .team i:last-child {
+  padding-left: 1rem;
 }
-.homeImage {
-  height: 27.5em;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.content {
-  text-align: center;
+.aboutContent .team:last-child {
+  padding-top: 2rem;
 }
