--- a/assets/less/nav.less
+++ b/assets/less/nav.less
@@ -4,6 +4,7 @@
     background-color: white;
     display: flex;
     justify-content: space-between;
+    margin-top: 15px;
   }
   
   #navbar a {
@@ -32,4 +33,8 @@
 
   #navbar a.active {
     color: @primaryColor;
+  }
+
+  .content {
+    margin-bottom: 3.5rem;
   }
